src/elements/snapshots/capitaine__elements__label__tests__new_label-2.snap
---
source: src/elements/label.rs
expression: label_data
---
LabelData(
    "Hello",
    PhantomData,
)
