src/elements/snapshots/capitaine__elements__label__tests__new_label.snap
---
source: src/elements/label.rs
expression: label
---
Label(
    "Hello",
    PhantomData,
    PhantomData,
)
